# foxeye

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  envs.sh  misc.py  notes  sites.json
client/: package-lock.json  package.json  tailwind.config.js
client/src/lib/: component_types.ts  types.ts
client/src/lib/components/: ProgressBar.svelte  SearchResult.svelte  SearchResultList.svelte
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/search/: +page.server.ts  +page.svelte
crawler/: Cargo.toml  sites.json
crawler/src/: amq.rs  config.rs  crawler.rs  main.rs  robots.rs
db/: Cargo.toml  Dockerfile
db/src/: db.rs  lib.rs
embedder/: Cargo.toml  run.sh  set_gcc.sh
embedder/src/: embedder.rs  lib.rs  main.rs
embedder/src/embed/: candle_embed.rs  embedder.rs  mod.rs  models.rs
migrations/: 20240415114555_init.down.sql  20240415114555_init.up.sql  20240615142757_index.down.sql  20240615142757_index.up.sql  20240615180931_chunk_delete_cascade.down.sql  20240615180931_chunk_delete_cascade.up.sql  20240617180134_triggers.down.sql  20240617180134_triggers.up.sql
parser/: Cargo.toml
parser/src/: config.rs  main.rs  parser.rs
search/: Cargo.toml  run.sh
search/src/: handlers.rs  main.rs  misc.rs  svc.rs
utils/: Cargo.toml
utils/src/: amq.rs  lib.rs
