[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.3", features = ["stream"]}
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
sqlx = {version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres"]}
anyhow = "1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
url = "2.5.0"
db = { workspace = true }
amqprs = { version = "1.6.1", features = ["tracing", "urispec", "traces"] }