[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres"]}
redis = "0.25.3"
deadpool-redis = "0.15.0"
thiserror = "1"
log = "0.4.21"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
