[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { workspace = true }
db = { workspace = true }
anyhow = "1.0.86"
tokio = { version = "1.37.0" , features =["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
scraper = "0.19.0"
url = "2.5.1"
serde_json = "1.0.117"
serde = "1.0.203"
sqlx = {version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres"]}
ulid = "1.1.2"

