[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = {version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres"]}
pgvector = { version = "0.3.2", features = ["sqlx"]}
embedder = { workspace = true }
db = { workspace = true }
tokio = { version = "1.38.0", features = ["parking_lot"]}
axum = {version = "0.7.5", features = ["json", "macros"]}
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
regex = "1.10.5"