[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = {version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres"]}
pgvector = { version = "0.3.2", features = ["sqlx"]}
embedder = { workspace = true }
db = { workspace = true }
tokio = { version = "1.38.0", features = ["parking_lot"]}
axum = {version = "0.7.5", features = ["json", "macros"]}
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
regex = "1.10.5"
tower-http = {version = "0.5.2", features = ["cors", "trace"]}
lazy_static = "1.4.0"